Modified blog index and add blog article page.

--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -17,7 +17,7 @@
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
-  <!-- build:css(.tmp) styles/home.css -->
+  <!-- build:css(.tmp) styles/blog.css -->
   <link rel="stylesheet" href="styles/blog.css">
   <!-- endbuild -->
   <!-- build:js scripts/vendor/modernizr.js -->
@@ -90,11 +90,27 @@
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
             </div>
+            <hr class="article-split"/>
           </li>
-
           <li class="media">
             <div class="media-left">
               <a href="#">
@@ -102,11 +118,27 @@
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
             </div>
+            <hr class="article-split"/>
           </li>
-
           <li class="media">
             <div class="media-left">
               <a href="#">
@@ -114,11 +146,27 @@
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
             </div>
+            <hr class="article-split"/>
           </li>
-
           <li class="media">
             <div class="media-left">
               <a href="#">
@@ -126,11 +174,27 @@
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
             </div>
+            <hr class="article-split"/>
           </li>
-
           <li class="media">
             <div class="media-left">
               <a href="#">
@@ -138,19 +202,251 @@
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
             </div>
+            <hr class="article-split"/>
+          </li>
+          <li class="media">
+            <div class="media-left">
+              <a href="#">
+                <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
+            </div>
+            <hr class="article-split"/>
+          </li>
+          <li class="media">
+            <div class="media-left">
+              <a href="#">
+                <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
+            </div>
+            <hr class="article-split"/>
+          </li>
+          <li class="media">
+            <div class="media-left">
+              <a href="#">
+                <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading"><a href="#">Media heading</a></h4>
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="#" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
+            </div>
+            <hr class="article-split"/>
           </li>
         </ul>
+        <nav class="text-center">
+          <ul class="pagination">
+            <li class="disabled">
+              <a href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+              <a href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <div class="col-sm-3">
+
+      <div class="col-sm-3 sidebar">
         <form role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="请输入主题搜索">
+              <a type="submit" class="btn btn-default input-group-addon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
+            </div>
         </form>
+
+        <div class="widget">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">文章分类</h4>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h4 class="list-group-item-heading">系列文章</h4>
+                <p class="list-group-item-text">
+                  <a href="#">《Java基础》</a>
+                  <a href="#">《Spring In Action》</a>
+                  <a href="#">《AngularJs In Action》</a>
+                </p>
+              </li>
+              <li class="list-group-item">
+                <h4 class="list-group-item-heading">散文札记</h4>
+                <p class="list-group-item-text">
+                  <a href="#">技术&艺术</a>
+                  <a href="#">生活</a>
+                  <a href="#">人生</a>
+                </p>
+              </li>
+              <li class="list-group-item">
+                <h4 class="list-group-item-heading">分类笔记</h4>
+                <p class="list-group-item-text">
+                  <a href="#">Java</a>
+                  <a href="#">汇编</a>
+                  <a href="#">C/C++</a>
+                  <a href="#">PHP</a>
+                  <a href="#">Eclipse</a>
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">热门文章</h4>
+            </div>
+            <div class="panel-body hot-articles">
+              <ul class="list-unstyled">
+                <li><a href="#">使用Bootstrap很顺手</a></li>
+                <li><a href="#">关于产品、系统和架构</a></li>
+                <li><a href="#">Spring4.0新特性使用</a></li>
+                <li><a href="#">AngularJs的灵魂级用法</a></li>
+                <li><a href="#">你到底懂不懂编程</a></li>
+                <li><a href="#">你到底适不适合做技术</a></li>
+                <li><a href="#">产品经理是个什么样的身份</a></li>
+                <li><a href="#">手敲代码的时代真的结束了吗？</a></li>
+                <li><a href="#">让代码返璞归真</a></li>
+                <li><a href="#">完美设计与快速编码的辩证关系</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">标签云</h4>
+            </div>
+            <div class="panel-body tag-cloud">
+              <a href="/tag/about-ghost/">Ghost</a>
+              <a href="/tag/release/">新版本发布</a>
+              <a href="/tag/javascript/">JavaScript</a>
+              <a href="/tag/promise/">Promise</a>
+              <a href="/tag/zhuti/">主题</a>
+              <a href="/tag/mysql/">MySQL</a>
+              <a href="/tag/nodejs/">Node.js</a>
+              <a href="/tag/ghost-in-depth/">深度玩转 Ghost</a>
+              <a href="/tag/ubuntu/">Ubuntu</a>
+              <a href="/tag/aliyun-ecs/">阿里云服务器</a>
+              <a href="/tag/nginx/">Nginx</a>
+              <a href="/tag/bae/">BAE</a>
+              <a href="/tag/theme/">Theme</a>
+              <a href="/tag/ghost-0-7-ban-ben/">Ghost 0.7 版本</a>
+              <a href="/tag/zhu-shou-han-shu/">助手函数</a>
+              <a href="/tag/customize-page/">自定义页面</a>
+              <a href="/tag/static-page/">静态页面</a>
+              <a href="/tag/upload/">上传</a>
+            </div>
+          </div>
+        </div>
+
+        <!--<div class="widget">
+          <h4 class="title">标签云</h4>
+          <div class="content tag-cloud">
+            <a href="/tag/about-ghost/">Ghost</a>
+            <a href="/tag/release/">新版本发布</a>
+            <a href="/tag/javascript/">JavaScript</a>
+            <a href="/tag/promise/">Promise</a>
+            <a href="/tag/zhuti/">主题</a>
+            <a href="/tag/mysql/">MySQL</a>
+            <a href="/tag/nodejs/">Node.js</a>
+            <a href="/tag/ghost-in-depth/">深度玩转 Ghost</a>
+            <a href="/tag/ubuntu/">Ubuntu</a>
+            <a href="/tag/aliyun-ecs/">阿里云服务器</a>
+            <a href="/tag/nginx/">Nginx</a>
+            <a href="/tag/bae/">BAE</a>
+            <a href="/tag/theme/">Theme</a>
+            <a href="/tag/ghost-0-7-ban-ben/">Ghost 0.7 版本</a>
+            <a href="/tag/zhu-shou-han-shu/">助手函数</a>
+            <a href="/tag/customize-page/">自定义页面</a>
+            <a href="/tag/static-page/">静态页面</a>
+            <a href="/tag/upload/">上传</a>
+          </div>
+        </div>-->
+
       </div>
     </div>
   </div>
