--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -82,7 +82,7 @@
 
     <div class="row">
       <div class="col-sm-9">
-        <ul class="media-list">
+        <ul class="media-list article-list">
           <li class="media">
             <div class="media-left">
               <a href="#">
