--- a/app/blog_article.html
+++ b/app/blog_article.html
@@ -56,7 +56,7 @@
   </div><!-- /.container -->
 </nav>
 
-<div class="jumbotron masthead">
+<div class="jumbotron bloghead">
   <div id="particleground"></div>
   <div id="particleground2"></div>
   <div class="container">
