--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -56,7 +56,7 @@
   </div><!-- /.container -->
 </nav>
 
-<div class="jumbotron masthead">
+<div class="jumbotron bloghead">
   <div id="particleground"></div>
   <div id="particleground2"></div>
   <div class="container">
@@ -72,13 +72,38 @@
     </ul>-->
   </div>
 </div>
+<div>
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand hidden" href="/">Blog</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+        <ul class="nav navbar-nav">
+          <li class="active current-menu-item"><a href="/">博客</a></li>
+          <li><a href="blog_index.html">系列文章</a></li>
+          <li><a href="#">技术笔记</a></li>
+          <li><a href="#">札记随笔</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
 
 <section>
   <div class="container">
-    <ol class="breadcrumb">
+    <!--<ol class="breadcrumb">
       <li><a href="/">首页</a></li>
       <li class="active">博客</li>
-    </ol>
+    </ol>-->
 
     <div class="row">
       <div class="col-sm-9">
