--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,9 @@
     <!-- build:css(.tmp) styles/home.css -->
     <link rel="stylesheet" href="styles/home.css">
     <!-- endbuild -->
+    <!-- build:css(.tmp) styles/blog.css -->
+    <link rel="stylesheet" href="styles/blog.css">
+    <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -269,9 +272,10 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
+    <script src="/bower_components/particleground/jquery.particleground.js"></script>
     <!-- endbuild -->
     <!-- 不明白写在里边为什么会消失 -->
-    <script src="/bower_components/particleground/jquery.particleground.js"></script>
+    <!--<script src="/bower_components/particleground/jquery.particleground.js"></script>-->
 
 
     <!-- build:js(.) scripts/plugins.js -->
