--- a/app/blog_article.html
+++ b/app/blog_article.html
@@ -72,19 +72,45 @@
     </ul>-->
   </div>
 </div>
+<div>
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand hidden" href="/">Blog</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+        <ul class="nav navbar-nav">
+          <li class="active current-menu-item"><a href="/">博客</a></li>
+          <li><a href="blog_index.html">系列文章</a></li>
+          <li><a href="#">技术笔记</a></li>
+          <li><a href="#">札记随笔</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
 
 <section>
   <div class="container">
-    <ol class="breadcrumb">
-      <li><a href="/">首页</a></li>
-      <li><a href="/">博客</a></li>
-      <li><a href="/">系列文章</a></li>
-      <li><a href="/">Java基础</a></li>
-      <li class="active">概念抽象、接口和类</li>
-    </ol>
 
     <div class="row">
       <div class="col-sm-9">
+        <ol class="breadcrumb">
+          <li><a href="/">首页</a></li>
+          <li><a href="/">博客</a></li>
+          <li><a href="/">系列文章</a></li>
+          <li><a href="/">Java基础</a></li>
+          <li class="active">概念抽象、接口和类</li>
+        </ol>
+
         <div class="box-common">
           <div class="article">
             <!--<div class="media-left">
