--- a/app/blog_article.html
+++ b/app/blog_article.html
@@ -100,17 +100,16 @@
 
 <section>
   <div class="container">
+    <ol class="breadcrumb">
+      <li><a href="/">首页</a></li>
+      <li><a href="/">博客</a></li>
+      <li><a href="/">系列文章</a></li>
+      <li><a href="/">Java基础</a></li>
+      <li class="active">概念抽象、接口和类</li>
+    </ol>
 
     <div class="row">
       <div class="col-sm-9">
-        <ol class="breadcrumb">
-          <li><a href="/">首页</a></li>
-          <li><a href="/">博客</a></li>
-          <li><a href="/">系列文章</a></li>
-          <li><a href="/">Java基础</a></li>
-          <li class="active">概念抽象、接口和类</li>
-        </ol>
-
         <div class="box-common">
           <div class="article">
             <!--<div class="media-left">
@@ -158,14 +157,20 @@
             </div>
             <hr class="article-split"/>
           </div>
+        </div>
 
+        <div class="box-common">
           <nav>
-            <ul class="pager article-pager">
-              <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> 上一篇</a></li>
-              <li class="next"><a href="#">下一篇 <span aria-hidden="true">&rarr;</span></a></li>
+            <ul class="pager1 article-pager list-unstyled">
+              <!--<li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> 上一篇</a></li>
+              <li class="next"><a href="#">下一篇 <span aria-hidden="true">&rarr;</span></a></li>-->
+              <li class="previous">上一篇：<a href="#">加价格那大幅度地方</a></li>
+              <li class="next">下一篇：<a href="#">加价格那大幅度地方</a></li>
             </ul>
           </nav>
+        </div>
 
+        <div class="box-common">
           <div class="comment">
             <h4 class="page-header">评论</h4>
             <form action="">
