--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,8 @@
     </nav>
 
     <div class="jumbotron masthead">
-      <div id="particleground"></div>
-      <div id="particleground2"></div>
+      <div id="no-particleground"></div>
+      <div id="no-particleground2"></div>
       <div class="container">
         <h1>Tony Een</h1>
         <!--<h2>朴实、真诚、简单的底层IT工作者，在人海漂泊。</h2>-->
