--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -117,7 +117,13 @@
               <li><a href="#">Linux</a></li>
             </ul>
           </li>
-          <li><a href="#">札记随笔</a></li>
+          <li class="menu-item"><a href="#">札记随笔</a>
+            <ul class="sub-menu">
+              <li class="menu-item"><a href="#">item121212</a></li>
+              <li class="menu-item active"><a href="#">item121212</a></li>
+              <li class="menu-item"><a href="#">item121212</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
